--- a/public/home.html
+++ b/public/home.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="theme.css">
+        <!-- <link rel="stylesheet" type="text/css" href="theme.css"> -->
     </head>
     <main>
-        <body>
+        <body onload="getAllSalaries()">
             <div class = "title">
                 NFL SALARIES 2019
             </div>
@@ -12,5 +12,6 @@
                 
             </div>
         </body>
+        <script src="/makeRequest.js" type="text/javascript"></script>
     </main>
 </html>
