--- a/public/home.html
+++ b/public/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <!-- <link rel="stylesheet" type="text/css" href="theme.css"> -->
+        <link rel="stylesheet" type="text/css" href="theme.css">
     </head>
     <main>
         <body onload="getAllSalaries()">
