show data on page

--- a/public/home.html
+++ b/public/home.html
@@ -8,9 +8,17 @@
             <div class = "title">
                 NFL SALARIES 2019
             </div>
-            <div class="records">
-                
+            <div class = "recordLegend">
+                <div class = "dbCol" id = "rank">RANK</div>
+                <div class = "dbCol" id = "name" >PLAYER NAME</div>
+                <div class = "dbCol" id = "pos" >POSITION</div>
+                <div class = "dbCol" id = "team">TEAM</div>
+                <div class = "dbCol" id = "salary">SALARY</div>
             </div>
+            <div id="records">
+                <div class ="aRecord"></div>
+            </div>
+
         </body>
         <script src="/makeRequest.js" type="text/javascript"></script>
     </main>
