added search functionality

--- a/public/home.html
+++ b/public/home.html
@@ -8,6 +8,10 @@
             <div class = "title">
                 NFL SALARIES 2019
             </div>
+            <div class = "search">
+                <input type="text" id="playerName"" placeholder="Enter player's name ...">
+                <button onclick = "search()">Submit</button>
+            </div>
             <div class = "recordLegend">
                 <div class = "dbCol" id = "rank">RANK</div>
                 <div class = "dbCol" id = "name" >PLAYER NAME</div>
