added functionality to get list back

--- a/public/home.html
+++ b/public/home.html
@@ -9,7 +9,7 @@
                 NFL SALARIES 2019
             </div>
             <div class = "search">
-                <input type="text" id="playerName"" placeholder="Enter player's name ...">
+                <input type="text" id="playerName" onkeyup="reAppear()" placeholder="Enter player's name ...">
                 <button onclick = "search()">Submit</button>
             </div>
             <div class = "recordLegend">
