added enter functionality

--- a/public/home.html
+++ b/public/home.html
@@ -9,8 +9,8 @@
                 NFL SALARIES 2019
             </div>
             <div class = "search">
-                <input type="text" id="playerName" onkeyup="reAppear()" placeholder="Enter player's name ...">
-                <button onclick = "search()">Submit</button>
+                <input type="text" id="playerName" onkeyup="run2Funcs()" placeholder="Enter player's name ...">
+                <button id = "btn" onclick = "search()">Submit</button>
             </div>
             <div class = "recordLegend">
                 <div class = "dbCol" id = "rank">RANK</div>
